@@ -12,16 +12,14 @@ import com.companyapp.backend.services.dto.response.ShiftAssignmentDto;
 import com.companyapp.backend.services.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired; // PŘIDÁNO
-import org.springframework.context.annotation.Lazy; // PŘIDÁNO
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Duration;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
+import java.time.*;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 @Slf4j
@@ -33,21 +31,22 @@ public class AttendanceProcessingServiceImpl implements AttendanceProcessingServ
     private final ShiftAssignmentRepository shiftAssignmentRepository;
     private final TimeCalculationService timeCalculationService;
 
-    // --- OPRAVA AUDITU: Vstříknutí sebe sama pro vynucení AOP Proxy ---
-    @Lazy
-    @Autowired
     private AttendanceProcessingService self;
+
+    @Autowired
+    public void setSelf(@Lazy AttendanceProcessingService self) {
+        this.self = self;
+    }
 
     @Override
     @Transactional
-    // PŘIDÁNA ANOTACE @CheckOwnership
     public AttendanceLogDto clockIn(@CheckOwnership UUID userId, UUID shiftAssignmentId, Instant clockInTime) {
         log.info("Uživatel {} si pípl příchod na směnu {}", userId, shiftAssignmentId);
 
         ShiftAssignment assignment = shiftAssignmentRepository.findById(shiftAssignmentId)
                 .orElseThrow(() -> new ResourceNotFoundException("Přiřazení směny nenalezeno."));
 
-        attendanceLogRepository.findByShiftAssignmentId(assignment.getId()).ifPresent(log -> {
+        attendanceLogRepository.findByShiftAssignmentId(assignment.getId()).ifPresent(al -> {
             throw new IllegalStateException("K této směně již existuje záznam docházky.");
         });
 
@@ -63,7 +62,6 @@ public class AttendanceProcessingServiceImpl implements AttendanceProcessingServ
 
     @Override
     @Transactional
-    // PŘIDÁNA ANOTACE @CheckOwnership
     public AttendanceLogDto clockOut(@CheckOwnership UUID userId, Instant clockOutTime) {
         log.info("Uživatel {} si pípl odchod", userId);
 
@@ -97,48 +95,46 @@ public class AttendanceProcessingServiceImpl implements AttendanceProcessingServ
     @Override
     @Transactional
     public List<ShiftAssignmentDto> splitShiftAssignment(UUID shiftAssignmentId, ZonedDateTime breakStart, ZonedDateTime breakEnd) {
-        throw new UnsupportedOperationException("Tato metoda zatím není implementována.");
+        throw new UnsupportedOperationException("Tato metoda zatím není implementována, ale je připravena pro budoucí modul dělení směn.");
     }
 
     @Override
     @Transactional
-    // PŘIDÁNA ANOTACE @CheckOwnership
     public AttendanceLogDto processTerminalAction(@CheckOwnership UUID userId) {
         Instant now = Instant.now();
-        java.time.LocalDateTime localNow = ZonedDateTime.ofInstant(now, ZoneId.of("UTC")).toLocalDateTime();
+        LocalDateTime localNow = ZonedDateTime.ofInstant(now, ZoneId.of("UTC")).toLocalDateTime();
 
-        java.util.Optional<AttendanceLog> openLog = attendanceLogRepository.findOpenLogForUser(userId);
+        Optional<AttendanceLog> openLog = attendanceLogRepository.findOpenLogForUser(userId);
         if (openLog.isPresent()) {
             log.info("Nalezen otevřený záznam. Provádím ODCHOD pro uživatele {}.", userId);
-
-            // --- OPRAVA: Voláme to přes 'self', takže AOP Proxy zachytí anotaci! ---
             return self.clockOut(userId, now);
         }
 
-        java.time.LocalDateTime windowStart = localNow.minusHours(2);
-        java.time.LocalDateTime windowEnd = localNow.plusHours(2);
+        LocalDateTime windowStart = localNow.minusHours(2);
+        LocalDateTime windowEnd = localNow.plusHours(2);
 
-        java.util.List<ShiftAssignment> assignments = shiftAssignmentRepository.findCurrentAssignments(userId, windowStart, windowEnd);
+        List<ShiftAssignment> assignments = shiftAssignmentRepository.findCurrentAssignments(userId, windowStart, windowEnd);
 
         if (assignments.isEmpty()) {
             throw new IllegalStateException("Nemáte momentálně naplánovanou žádnou směnu.");
         }
 
-        ShiftAssignment currentAssignment = assignments.get(0);
-
+        // --- OPRAVA: get(0) nahrazeno za getFirst() pro Sequenced Collections (Java 21+) ---
+        ShiftAssignment currentAssignment = assignments.getFirst();
         log.info("Nalezena dnešní směna. Provádím PŘÍCHOD pro uživatele {}.", userId);
 
-        // --- OPRAVA: Voláme to přes 'self', takže AOP Proxy zachytí anotaci! ---
         return self.clockIn(userId, currentAssignment.getId(), now);
     }
 
     private AttendanceLogDto mapToDto(AttendanceLog logEntity) {
+        String status = Boolean.TRUE.equals(logEntity.getManagerApproved()) ? "APPROVED" : "NEEDS_APPROVAL";
+
         return AttendanceLogDto.builder()
                 .id(logEntity.getId())
                 .shiftAssignmentId(logEntity.getShiftAssignment().getId())
                 .clockInTime(logEntity.getClockIn() != null ? logEntity.getClockIn().atZone(ZoneId.of("UTC")).toInstant() : null)
                 .clockOutTime(logEntity.getClockOut() != null ? logEntity.getClockOut().atZone(ZoneId.of("UTC")).toInstant() : null)
-                .status(logEntity.getManagerApproved() ? "APPROVED" : "NEEDS_APPROVAL")
+                .status(status)
                 .build();
     }
 }
